# FogHacks

./: README.md  Random_Phase_Mask_Scattering.py  SLM_to_DMD.py  display_dmd_pattern.py  display_image.py  dmd_binary_checkerboard_example.py  dmd_binary_testimages_example.py  example_helper.py  fog_correction.py  fog_model.py  test.py  test2.py  test3.py
diffractsim_main/diffractsim/: __init__.py
examples/: build.py  build.sh
examples/arduino/: TriggerTester.ino
examples/camera_acquire/: description.txt
examples/camera_acquire/cpp/: CMakeLists.txt  camera_acquire_example.cpp
examples/camera_acquire/python/: camera_acquire_example.py
examples/camera_dmd_binary/: description.txt
examples/camera_dmd_binary/cpp/: CMakeLists.txt  camera_dmd_binary_example.cpp
examples/camera_dmd_binary/python/: camera_dmd_binary_example.py
examples/camera_dmd_color/: description.txt
examples/camera_dmd_color/cpp/: CMakeLists.txt  camera_dmd_color_example.cpp
examples/camera_dmd_color/python/: camera_dmd_color_example.py
examples/camera_dmd_grayscale/: description.txt
examples/camera_dmd_grayscale/cpp/: CMakeLists.txt  camera_dmd_grayscale_example.cpp
examples/camera_dmd_grayscale/python/: camera_dmd_grayscale_example.py
examples/camera_multi_exposure/: description.txt
examples/camera_multi_exposure/cpp/: CMakeLists.txt  camera_multi_exposure_example.cpp
examples/camera_multi_exposure/python/: camera_multi_exposure_example.py
examples/camera_sequence/: description.txt
examples/camera_sequence/cpp/: CMakeLists.txt  camera_sequence_example.cpp
examples/camera_sequence/python/: camera_sequence_example.py
examples/camera_triggerin/: description.txt
examples/camera_triggerin/cpp/: CMakeLists.txt  camera_triggerin_example.cpp
examples/camera_triggerin/python/: camera_triggerin_example.py
examples/camera_triggerout/: description.txt
examples/camera_triggerout/cpp/: CMakeLists.txt  camera_triggerout_example.cpp
examples/camera_triggerout/python/: camera_triggerout_example.py
examples/common/cpp/: example_helper.cxx  example_helper.h
examples/common/python/: example_helper.py
examples/dmd_binary_checkerboard/: description.txt
examples/dmd_binary_checkerboard/cpp/: CMakeLists.txt  dmd_binary_checkerboard_example.cxx
examples/dmd_binary_checkerboard/csharp/: dmd_binary_checkerboard.cs  dmd_binary_checkerboard.csproj  dmd_binary_checkerboard.sln
examples/dmd_binary_graycode/: description.txt
examples/dmd_binary_graycode/cpp/: CMakeLists.txt  dmd_binary_graycode_example.cxx
examples/dmd_binary_graycode/python/: dmd_binary_graycode_example.py
examples/dmd_binary_large_sequence/: description.txt
examples/dmd_binary_large_sequence/python/: dmd_binary_large_sequence.py
examples/dmd_binary_pageflip/cpp/: CMakeLists.txt  dmd_binary_pageflip_example.cpp
examples/dmd_binary_roi/: description.txt
examples/dmd_binary_roi/python/: dmd_binary_roi_example.py
examples/dmd_binary_streaming/: description.txt
examples/dmd_binary_streaming/cpp/: CMakeLists.txt  dmd_binary_streaming_example.cxx
examples/dmd_binary_streaming/python/: dmd_binary_streaming_example.py
examples/dmd_binary_streaming_highspeed/cpp/: CMakeLists.txt  dmd_binary_streaming_highspeed_example.cxx
examples/dmd_binary_testimages/: description.txt
examples/dmd_binary_testimages/cpp/: CMakeLists.txt  dmd_binary_testimages_example.cxx
examples/dmd_binary_testimages/csharp/: dmd_binary_testimages.cs  dmd_binary_testimages.csproj  dmd_binary_testimages.sln
examples/dmd_binary_testimages/matlab/: dmd_binary_testimages.m
examples/dmd_binary_testimages/python/: dmd_binary_testimages_example.py
examples/dmd_binary_triggerin/: description.txt
examples/dmd_binary_triggerin/cpp/: CMakeLists.txt  dmd_binary_triggerin_example.cxx
examples/dmd_binary_triggerin/python/: dmd_binary_triggerin_example.py
examples/dmd_binary_triggerout/: description.txt
examples/dmd_binary_triggerout/cpp/: CMakeLists.txt  dmd_binary_triggerout_example.cxx
examples/dmd_binary_triggerout/matlab/: dmd_binary_triggerout.m
examples/dmd_binary_triggerout/python/: dmd_binary_triggerout_example.py  dmd_binary_triggerout_example_2.py  dmd_multiple_devices_example.py
examples/dmd_camera_streaming/cpp/: CMakeLists.txt  dmd_camera_streaming_example.cxx
examples/dmd_color_barpattern/: description.txt
examples/dmd_color_barpattern/cpp/: CMakeLists.txt  dmd_color_barpattern_example.cxx
examples/dmd_color_debruijn/: description.txt
examples/dmd_color_testimages/: description.txt
examples/dmd_grayscale_sinewave/: description.txt
examples/dmd_grayscale_testimages/: description.txt
examples/dmd_grayscale_triggerin/: description.txt
examples/dmd_grayscale_triggerout/: description.txt
examples/dmd_grayscale_triggerout/cpp/: CMakeLists.txt  dmd_grayscale_triggerout_example.cxx
(+22 files in other folders)
